--- a/app/src/main/res/layout/content_morvi_finder.xml
+++ b/app/src/main/res/layout/content_morvi_finder.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,12 +7,12 @@
     tools:showIn="@layout/activity_morvi_finder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="umg.ingciberneticasistemas.morvi.MorviFinder">
+    tools:context="umg.ingciberneticasistemas.morvi.MorviFinderActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_devices"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
-</android.support.v4.widget.NestedScrollView>
+</LinearLayout>
