--- a/app/src/main/res/layout/content_morvi_finder.xml
+++ b/app/src/main/res/layout/content_morvi_finder.xml
@@ -7,6 +7,7 @@
     tools:showIn="@layout/activity_morvi_finder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="umg.ingciberneticasistemas.morvi.MorviFinderActivity">
 
     <android.support.v7.widget.RecyclerView
@@ -14,5 +15,13 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+
+    <ProgressBar
+        android:id="@+id/progress_bt_find"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:visibility="invisible" />
 
 </LinearLayout>
