--- a/app/src/main/res/layout/device_view.xml
+++ b/app/src/main/res/layout/device_view.xml
@@ -1,23 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    tools:weightSum="7">
 
     <ImageView
+        android:layout_weight="1"
+        android:id="@+id/ic_bluetooth_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_bluetooth"
+        android:layout_gravity="center"
         android:layout_margin="@dimen/text_margin"
-        android:id="@+id/ic_bluetooth_status" />
+        android:src="@drawable/ic_bluetooth" />
 
     <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_toEndOf="@+id/ic_bluetooth_status"
-        android:gravity="center_vertical"
-        android:text="Ejemplo"
+        android:layout_weight="5"
+        android:id="@+id/device_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/text_margin"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="16dp"
+        android:textSize="24sp"
         android:textStyle="bold" />
 
-</RelativeLayout>
+    <ProgressBar
+        android:layout_weight="1"
+        android:id="@+id/progress_loader"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:visibility="invisible" />
+
+</LinearLayout>
