--- a/app/src/main/res/layout/activity_morvi_finder.xml
+++ b/app/src/main/res/layout/activity_morvi_finder.xml
@@ -42,6 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
         app:fabSize="normal"
+        android:onClick="fabClicked"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
         app:srcCompat="@drawable/ic_autorenew" />
