Se separa todo lo que concierne al bt en una clase driver, Se agrega fragment de settings, Se crea la activity de controlador, Se meustra una barra de progreso al tratar de conectarse a un dispositivo, Correcciones menores para impedir que el usuario genere multiples escaneos, entre otras cosas del bt.

--- a/app/src/main/res/layout/activity_morvi_finder.xml
+++ b/app/src/main/res/layout/activity_morvi_finder.xml
@@ -9,7 +9,7 @@
     tools:context="umg.ingciberneticasistemas.morvi.MorviFinderActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar"
+        android:id="@+id/app_bar_morvi_finder"
         android:fitsSystemWindows="true"
         android:layout_height="@dimen/app_bar_height"
         android:layout_width="match_parent"
@@ -43,7 +43,7 @@
         android:layout_margin="@dimen/fab_margin"
         app:fabSize="normal"
         android:onClick="fabClicked"
-        app:layout_anchor="@id/app_bar"
+        app:layout_anchor="@id/app_bar_morvi_finder"
         app:layout_anchorGravity="bottom|end"
         app:srcCompat="@drawable/ic_autorenew" />
 
